# reVRt

./: .buildinfo  .gitignore  CITATION.cff  Cargo.toml  README.md  README.rst  api.html  development.md  genindex.html  index.html  objects.inv  pixi.toml  pyproject.toml  search.html  searchindex.js  tox.ini
.delete_me_bkp/: test_from_revx.py
.github/: CODEOWNERS  codecov.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation_improvement.yaml  feature_request.yaml  installation_issue.yaml
.github/workflows/: bench.yml  ci-python.yml  ci-rust.yml  codecov.yml  codeql.yml  docs.yml  lint-python.yml  release-cli.yml  release-python.yml  release-rust.yml  release_drafter.yml  tests-python.yml  tests_tox.yml
_autosummary/: revrt.constants.BARRIER_H5_LAYER_NAME.html  revrt.constants.DEFAULT_DTYPE.html  revrt.constants.METERS_IN_MILE.html  revrt.constants.html  revrt.costs.base.BaseLayerCreator.html  revrt.costs.base.html  revrt.costs.cli.build_routing_layers.html  revrt.costs.config.config.TransmissionConfig.html  revrt.costs.config.config.html  revrt.costs.config.config.parse_cap_class.html  revrt.costs.config.config.parse_config.html  revrt.costs.config.html  revrt.costs.dry_costs_creator.DEFAULT_HILL_MULTIPLIER.html  revrt.costs.dry_costs_creator.DEFAULT_HILL_SLOPE.html  revrt.costs.dry_costs_creator.DryCostsCreator.html  revrt.costs.dry_costs_creator.NLCD_LAND_USE_CLASSES.html  revrt.costs.dry_costs_creator.WATER_MULTIPLIER.html  revrt.costs.dry_costs_creator.WATER_NLCD_CODE.html  revrt.costs.dry_costs_creator.compute_land_use_multipliers.html  revrt.costs.dry_costs_creator.compute_slope_multipliers.html  revrt.costs.dry_costs_creator.html  revrt.costs.html  revrt.costs.layer_creator.LayerCreator.html  revrt.costs.masks.Masks.html  revrt.exceptions.html  revrt.exceptions.revrtConfigurationError.html  revrt.exceptions.revrtError.html  revrt.exceptions.revrtFileExistsError.html  revrt.exceptions.revrtFileNotFoundError.html  revrt.exceptions.revrtProfileCheckError.html  revrt.exceptions.revrtRuntimeError.html  revrt.exceptions.revrtTypeError.html  revrt.exceptions.revrtValueError.html  revrt.html  revrt.models.cost_layers.DryCosts.html  revrt.models.cost_layers.Extents.html  revrt.models.cost_layers.IsoMultipliers.html  revrt.models.cost_layers.LandUseMultipliers.html  revrt.models.cost_layers.LayerBuildComponents.html  revrt.models.cost_layers.LayerBuildConfig.html  (+38 more)
_cli/: cli.html  reVRt.html
_modules/: index.html
_modules/revrt/: exceptions.html  warn.html
_sources/: index.rst.txt
_sources/_autosummary/: revrt.constants.BARRIER_H5_LAYER_NAME.rst.txt  revrt.constants.rst.txt  revrt.costs.cli.rst.txt  revrt.costs.config.config.parse_cap_class.rst.txt  revrt.costs.config.config.parse_config.rst.txt  revrt.costs.config.config.rst.txt  revrt.costs.config.rst.txt  revrt.costs.dry_costs_creator.DEFAULT_HILL_MULTIPLIER.rst.txt  revrt.costs.dry_costs_creator.DEFAULT_MTN_SLOPE.rst.txt  revrt.costs.dry_costs_creator.NLCD_LAND_USE_CLASSES.rst.txt  revrt.costs.dry_costs_creator.WATER_NLCD_CODE.rst.txt  revrt.costs.dry_costs_creator.compute_land_use_multipliers.rst.txt  revrt.costs.dry_costs_creator.compute_slope_multipliers.rst.txt  revrt.costs.dry_costs_creator.rst.txt  revrt.costs.layer_creator.LayerCreator.rst.txt  revrt.costs.layer_creator.rst.txt  revrt.costs.masks.rst.txt  revrt.exceptions.revrtAttributeError.rst.txt  revrt.exceptions.revrtConfigurationError.rst.txt  revrt.exceptions.revrtError.rst.txt  revrt.exceptions.revrtKeyError.rst.txt  revrt.exceptions.revrtNotImplementedError.rst.txt  revrt.exceptions.revrtProfileCheckError.rst.txt  revrt.exceptions.revrtRuntimeError.rst.txt  revrt.exceptions.revrtValueError.rst.txt  revrt.models.cost_layers.DryCosts.rst.txt  revrt.models.cost_layers.IsoMultipliers.rst.txt  revrt.models.cost_layers.LandUseMultipliers.rst.txt  revrt.models.cost_layers.LayerBuildComponents.rst.txt  revrt.models.cost_layers.LayerBuildConfig.rst.txt  revrt.models.cost_layers.Layers.rst.txt  revrt.models.cost_layers.MergeFrictionBarriers.rst.txt  revrt.models.cost_layers.Rasterize.rst.txt  revrt.models.cost_layers.SlopeMultipliers.rst.txt  revrt.models.cost_layers.rst.txt  revrt.models.rst.txt  revrt.spatial_characterization.cli.rst.txt  revrt.spatial_characterization.rst.txt  revrt.spatial_characterization.stats.ComputableStats.rst.txt  revrt.spatial_characterization.stats.FractionalStat.rst.txt  (+19 more)
_sources/_cli/: cli.rst.txt  reVRt.rst.txt
_sources/misc/: INSTALL.rst.txt
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/lib/: Cargo.toml
crates/lib/src/: cost.rs  dataset.rs  ffi.rs  lib.rs
crates/revrt/: Cargo.toml
crates/revrt/benches/: standard.rs
crates/revrt/src/: cost.rs  dataset.rs  error.rs  ffi.rs  lib.rs  solution.rs
crates/revrt/src/dataset/: lazy_chunk.rs  lazy_dataset.rs  lazy_subset.rs  mod.rs  samples.rs
crates/revrt/src/ffi/: mod.rs  py_tracing.rs  simplify_path.rs
crates/revrt/src/network/: cost.rs  mod.rs
crates/revrt/src/routing/: algorithm.rs  features.rs  mod.rs  scenario.rs
crates/revrt/src/simulation/: mod.rs
dev/: README.html  index.html
dev/bench/: data.js
docs/: Makefile  py-modindex.html  searchindex.js
docs/_autosummary/: revrt.costs.cli.build_routing_layers.html  revrt.costs.cli.html  revrt.costs.dry_costs_creator.DEFAULT_MTN_MULTIPLIER.html  revrt.costs.dry_costs_creator.DEFAULT_MTN_SLOPE.html  revrt.costs.dry_costs_creator.DryCostsCreator.html  revrt.costs.layer_creator.html  revrt.costs.masks.html  revrt.exceptions.revrtAttributeError.html  revrt.exceptions.revrtKeyError.html  revrt.exceptions.revrtNotImplementedError.html  revrt.models.cost_layers.Extents.html  revrt.models.cost_layers.LayerBuildConfig.html  revrt.models.cost_layers.MergeFrictionBarriers.html  revrt.models.html  (+8 more)
misc/: INSTALL.html  installation.html
reVRt/: __init__.py  _cli.py  exceptions.py
revrt/: __init__.py  _cli.py  constants.py  exceptions.py  warn.py
support/: features_to_zarr.py
tests/: conftest.py
trev/: _cli.py  exceptions.py
(+1002 files in other folders)
