[workspace]
members = [ "crates/lib"]
default-members = ["crates/lib"]
resolver = "3"

[workspace.package]
version = "0.0.1"
authors = [
  "Guilherme Castelão <gpimenta@nrel.gov>",
  "Paul Pinchuk <Pavlo.Pinchuk@nrel.gov>",
]
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
ndarray = { version = "0.16.1", features = ["rayon"] }
pathfinding = "4.14.0"
rayon = "1.10.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zarrs = { version = "0.19.2", features = ["async"] }
