[workspace]
members = [ "crates/cli", "crates/lib"]
default-members = ["crates/lib"]
resolver = "3"

[workspace.package]
version = "0.0.4"
authors = [
  "Guilherme Castelão <gpimenta@nrel.gov>",
  "Paul Pinchuk <Pavlo.Pinchuk@nrel.gov>",
]
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
nrel-transmission = { version = "0.0.4", path = "crates/lib" }
clap = { version = "4.5.37", features = ["derive", "cargo"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
pathfinding = "4.14.0"
pyo3 = { version = "0.25.0", features = ["abi3-py311", "extension-module"]}
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tempfile = "3.19.1"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zarrs = { version = "0.19.2", features = ["async", "filesystem"] }
