[workspace]
members = [ "crates/cli", "crates/revrt"]
default-members = ["crates/revrt"]
resolver = "3"

[workspace.package]
version = "0.0.5"
authors = [
  "Guilherme Castelão <gpimenta@nrel.gov>",
  "Paul Pinchuk <Pavlo.Pinchuk@nrel.gov>",
]
edition = "2024"
rust-version = "1.87.0"

[workspace.dependencies]
revrt = { version = "0.0.5", path = "crates/revrt" }
clap = { version = "4.5.37", features = ["derive", "cargo"] }
criterion = { version = "0.7.0", features = ["html_reports"] }
derive_builder = "0.20.2"
ndarray = { version = "0.16.1", features = ["rayon"] }
pathfinding = "4.14.0"
pyo3 = { version = "0.25.1", features = [
    "abi3-py311",
    "extension-module",
    "macros",
    "chrono",
    "chrono-tz",
] }
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tempfile = "3.19.1"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zarrs = { version = "0.21.2", features = ["async", "filesystem"] }
