[package]
name = "reVX-transmission-cli"
version = "0.0.4"
authors.workspace = true
edition.workspace = true
# license.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
nrel_transmission = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
