[package]
name = "revrt-cli"
version = "0.0.5"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
clap = { workspace = true }
revrt = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dhat = { workspace = true }

[features]
dhat-heap = []

[profile.release]
# debug = true

# incremental = true
# lto = "fat"
