[package]
name = "revrt"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
ndarray = { workspace = true }
pathfinding = { workspace = true }
pyo3 = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zarrs = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.25.0"

[dev-dependencies]
test-case = "3.3.1"
